[package]
name = "brainly_search"
version = "0.1.0"
edition = "2018"
author= "fdciabdul"

[dependencies]
reqwest = { version = "0.11", features = ["json"] } 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
clap = "2"
prettytable-rs = "^0.10"
scraper = "0.17.1"
term_size = "0.3.2"